<resources>
    <string name="app_name">Faculty Dashboard</string>
    <string name="login">Login</string>
    >

    <string name="register">Register</string>
    <string name="name">So, what\'s your name ?</string>
    <string name="email_address">Where can we email you at ?</string>
    <string name="password">Pick a super duper secret</string>
    <string name="confirm_password">Prove us you remember the secret</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logout">Logout</string>
    <string name="dateOfAppoinment">Tell us when you want to book an appointment</string>
    <string name="which_kind_are_you">Which kind are you?</string>
    <string name="tell_us_why_you_would_like_to_have_a_meeting">Tell us why you would like to have a meeting?</string>
    <string name="hh_mm">Enter the starting time of the appointment</string>
    <string name="hi_mm">Enter the ending time of the appointment</string>
    <string name="appointment_date">Enter the date of appointment</string>
    <string name="title_activity_new_home">newHomeActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
